# agentplane

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: index.html
examples/: 01_basic_policy.py  02_escalation.py  03_versioning.py  04_decorators.py  05_multi_tenant.py  06_plugboard.py
scripts/: bump-version.sh  install-hooks.sh  pre-push.hook  regression.sh  release.sh
src/agentplane/: __init__.py  py.typed
src/agentplane/audit/: __init__.py  trail.py
src/agentplane/core/: __init__.py  context.py  exceptions.py  policy.py  rule.py  selector.py
src/agentplane/degradation/: __init__.py  modes.py
src/agentplane/engine/: __init__.py  _hooks.py  decorators.py  engine.py  plugboard.py
src/agentplane/escalation/: __init__.py  actions.py  chain.py
src/agentplane/rules/: __init__.py  api.py  blocking.py  nonblocking.py
src/agentplane/security/: __init__.py  scanner.py
src/agentplane/service/: __init__.py  __main__.py  app.py  schemas.py
src/agentplane/service/routes/: agents.py  audit.py  policies.py
src/agentplane/store/: __init__.py  memory.py  sqlite.py
src/agentplane/sync/: __init__.py  syncer.py
src/agentplane/versioning/: __init__.py  manager.py
tests/: conftest.py  test_audit.py  test_decorators.py  test_engine.py  test_escalation.py  test_plugboard.py  test_rules_blocking.py  test_rules_nonblocking.py  test_security.py  test_selector.py  test_store.py  test_versioning.py
