[project]
name = "agentplane-py"
version = "0.1.0"
description = "Runtime policy control plane for production AI agents. Block, degrade, escalate — without a redeploy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Naveen Kumar Baskaran" }]
keywords = ["agents", "policy", "governance", "guardrails", "llm", "enterprise", "runtime", "control-plane"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage   = "https://naveenkumarbaskaran.github.io/agentplane/"
Repository = "https://github.com/naveenkumarbaskaran/agentplane"
Issues     = "https://github.com/naveenkumarbaskaran/agentplane/issues"

[project.optional-dependencies]
otel    = ["opentelemetry-api>=1.20"]
sqlite  = ["aiosqlite>=0.20"]
sync    = ["httpx>=0.27"]
service = ["fastapi>=0.111", "uvicorn>=0.30"]
all     = ["agentplane-py[otel,sqlite,sync,service]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio[trio]>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentplane"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
check_untyped_defs    = true
warn_unused_ignores   = false
